--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -15,13 +15,13 @@
   "author": "Ron Buckton <ron.buckton@microsoft.com>",
   "license": "MIT",
   "dependencies": {
-    "semver": "^7.3.8",
-    "winreg": "^1.2.4"
+    "semver": "7.5.4",
+    "winreg": "1.2.5"
   },
   "devDependencies": {
-    "@types/semver": "^7.3.13",
-    "@types/winreg": "^1.2.32",
-    "typescript": "^4.9.5"
+    "@types/semver": "7.5.4",
+    "@types/winreg": "1.2.34",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "compile": "tsc -b",
