--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dexnode",
-  "version": "1.2.2",
+  "version": "0.0.1",
   "description": "Run NodeJS with logging options needed by Deopt Explorer",
   "type": "module",
   "bin": {
@@ -12,7 +12,11 @@
     "nodejs",
     "v8"
   ],
-  "author": "Ron Buckton <ron.buckton@microsoft.com>",
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
   "license": "MIT",
   "dependencies": {
     "semver": "7.5.4",
@@ -21,12 +25,26 @@
   "devDependencies": {
     "@types/semver": "7.5.4",
     "@types/winreg": "1.2.34",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "typescript-esbuild": "0.3.1"
   },
   "scripts": {
     "compile": "tsc -b",
     "clean": "tsc -b --clean",
     "prestart": "npm run compile",
-    "start": "node bin/dexnode"
+    "start": "node bin/dexnode",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
   }
 }
