--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -1,23 +1,39 @@
 {
   "name": "dexnode",
   "version": "0.0.1",
+  "private": "false",
   "description": "Run NodeJS with logging options needed by Deopt Explorer",
-  "type": "module",
-  "bin": {
-    "dexnode": "./bin/dexnode.js"
-  },
   "keywords": [
     "deopt",
     "explorer",
     "nodejs",
     "v8"
   ],
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
   "author": {
     "name": "Nikola Hristov",
     "email": "nikola@nikolahristov.tech",
     "url": "https://nikolahristov.tech"
   },
-  "license": "MIT",
+  "type": "module",
+  "bin": {
+    "dexnode": "./bin/dexnode.js"
+  },
+  "scripts": {
+    "clean": "tsc -b --clean",
+    "compile": "tsc -b",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts",
+    "prestart": "npm run compile",
+    "start": "node bin/dexnode"
+  },
   "dependencies": {
     "semver": "7.5.4",
     "winreg": "1.2.5"
@@ -28,22 +44,6 @@
     "typescript": "5.2.2",
     "typescript-esbuild": "0.3.1"
   },
-  "scripts": {
-    "compile": "tsc -b",
-    "clean": "tsc -b --clean",
-    "prestart": "npm run compile",
-    "start": "node bin/dexnode",
-    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
-  },
-  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
-  "bugs": {
-    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
-  },
-  "private": "false",
   "publishConfig": {
     "access": "public"
   }
