--- a/package.json
+++ b/package.json
@@ -1530,7 +1530,7 @@
 		"rimraf": "^3.0.0",
 		"ts-jest": "^29.1.0",
 		"ts-loader": "^9.4.3",
-		"typescript-esbuild": "latest",
+		"typescript-esbuild": "0.4.5",
 		"webpack": "^5.87.0",
 		"webpack-cli": "^5.1.4"
 	},
