--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -36,7 +36,7 @@
 		"@types/semver": "^7.3.13",
 		"@types/winreg": "^1.2.32",
 		"typescript": "^4.9.5",
-		"typescript-esbuild": "latest"
+		"typescript-esbuild": "0.4.5"
 	},
 	"publishConfig": {
 		"access": "public"
