--- a/package.json
+++ b/package.json
@@ -1,56 +1,30 @@
 {
-	"name": "deoptexplorer-vscode",
-	"displayName": "deoptexplorer-vscode",
-	"version": "0.0.1",
-	"private": false,
-	"description": "V8 Deoptimization Explorer Extension for VS Code",
-	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"activationEvents": [
+		"onLanguage:deoptexplorer-v8-map",
+		"onCommand:deoptexplorer.log.opens",
+		"onView:deoptexplorer.pick",
+		"onView:deoptexplorer.logOverviewView",
+		"onView:deoptexplorer.files",
+		"onView:deoptexplorer.maps",
+		"onView:deoptexplorer.profile",
+		"workspaceContains:**/*-v8.log",
+		"onWebviewPanel:deoptexplorer.logOverviewView",
+		"onWebviewPanel:deoptexplorer.reportView",
+		"onWebviewPanel:deoptexplorer.functionView"
+	],
+	"author": {
+		"email": "Hello@Playform.Cloud",
+		"name": "Playform",
+		"url": "https://playform.cloud"
+	},
 	"bugs": {
 		"url": "https://github.com/CodeEditorLand/Foundation/issues"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "Playform",
-		"email": "Hello@Playform.Cloud",
-		"url": "https://playform.cloud"
-	},
-	"type": "module",
-	"imports": {
-		"#chromium/*.js": {
-			"default": "./src/third-party-derived/chromium/*.ts"
-		},
-		"#core/*.js": {
-			"default": "./src/core/*.ts"
-		},
-		"#deoptigate/*.js": {
-			"default": "./src/third-party-derived/deoptigate/*.ts"
-		},
-		"#extension/*.js": {
-			"default": "./src/extension/*.ts"
-		},
-		"#v8/*.js": {
-			"default": "./src/third-party-derived/v8/*.ts"
-		},
-		"#vscode/*.js": {
-			"default": "./src/third-party-derived/vscode/*.ts"
+	"capabilities": {
+		"untrustedWorkspaces": {
+			"description": "The extension will not attempt to use an executable (i.e., 'dumpbin' or 'nm') to resolve native function symbols.",
+			"supported": "limited"
 		}
-	},
-	"main": "./dist/extension.js",
-	"scripts": {
-		"clean": "rimraf dist && rimraf out",
-		"compile": "tsc -b",
-		"compile-log": "node --log-ic --log-maps --prof --log-internal-timer-events --log-source-code D:/dev/TypeScript/built/local/tsc.js -b --force",
-		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
-		"syntax": "node scripts/syntax.js",
-		"vscode:prepublish": "npm run clean && npm run webpack-release",
-		"watch": "tsc -b -w",
-		"webpack": "npm run syntax && webpack --mode development",
-		"webpack-dev": "npm run syntax && webpack --mode development --watch",
-		"webpack-release": "npm run syntax && webpack --mode production"
 	},
 	"contributes": {
 		"colors": [
@@ -1466,19 +1440,6 @@
 			]
 		}
 	},
-	"activationEvents": [
-		"onLanguage:deoptexplorer-v8-map",
-		"onCommand:deoptexplorer.log.opens",
-		"onView:deoptexplorer.pick",
-		"onView:deoptexplorer.logOverviewView",
-		"onView:deoptexplorer.files",
-		"onView:deoptexplorer.maps",
-		"onView:deoptexplorer.profile",
-		"workspaceContains:**/*-v8.log",
-		"onWebviewPanel:deoptexplorer.logOverviewView",
-		"onWebviewPanel:deoptexplorer.reportView",
-		"onWebviewPanel:deoptexplorer.functionView"
-	],
 	"dependencies": {
 		"@esfx/async-deferred": "^1.1.0-alpha.202306080253",
 		"@esfx/async-delay": "^1.1.0-alpha.202306080253",
@@ -1509,6 +1470,7 @@
 		"timeago.js": "^4.0.1",
 		"typescript": "^5.1.3"
 	},
+	"description": "V8 Deoptimization Explorer Extension for VS Code",
 	"devDependencies": {
 		"@esfx/type-model": "^1.0.0",
 		"@types/ffi-napi": "^4.0.3",
@@ -1530,18 +1492,56 @@
 		"rimraf": "^3.0.0",
 		"ts-jest": "^29.1.0",
 		"ts-loader": "^9.4.3",
-		"typescript-esbuild": "0.4.5",
+		"typescript-esbuild": "",
 		"webpack": "^5.87.0",
 		"webpack-cli": "^5.1.4"
 	},
+	"displayName": "deoptexplorer-vscode",
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"icon": "resources/icon.png",
+	"imports": {
+		"#chromium/*.js": {
+			"default": "./src/third-party-derived/chromium/*.ts"
+		},
+		"#core/*.js": {
+			"default": "./src/core/*.ts"
+		},
+		"#deoptigate/*.js": {
+			"default": "./src/third-party-derived/deoptigate/*.ts"
+		},
+		"#extension/*.js": {
+			"default": "./src/extension/*.ts"
+		},
+		"#v8/*.js": {
+			"default": "./src/third-party-derived/v8/*.ts"
+		},
+		"#vscode/*.js": {
+			"default": "./src/third-party-derived/vscode/*.ts"
+		}
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"main": "./dist/extension.js",
+	"name": "deoptexplorer-vscode",
+	"private": false,
 	"publishConfig": {
 		"access": "public"
 	},
-	"icon": "resources/icon.png",
-	"capabilities": {
-		"untrustedWorkspaces": {
-			"description": "The extension will not attempt to use an executable (i.e., 'dumpbin' or 'nm') to resolve native function symbols.",
-			"supported": "limited"
-		}
-	}
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
+	},
+	"scripts": {
+		"clean": "rimraf dist && rimraf out",
+		"compile": "tsc -b",
+		"compile-log": "node --log-ic --log-maps --prof --log-internal-timer-events --log-source-code D:/dev/TypeScript/built/local/tsc.js -b --force",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"syntax": "node scripts/syntax.js",
+		"vscode:prepublish": "npm run clean && npm run webpack-release",
+		"watch": "tsc -b -w",
+		"webpack": "npm run syntax && webpack --mode development",
+		"webpack-dev": "npm run syntax && webpack --mode development --watch",
+		"webpack-release": "npm run syntax && webpack --mode production"
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
