--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -1,25 +1,36 @@
 {
-	"name": "dexnode",
-	"version": "0.0.1",
-	"private": false,
-	"description": "Run NodeJS with logging options needed by Deopt Explorer",
-	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"author": {
+		"email": "Hello@Playform.Cloud",
+		"name": "Playform",
+		"url": "https://playform.cloud"
+	},
+	"bin": {
+		"dexnode": "./bin/dexnode.js"
+	},
 	"bugs": {
 		"url": "https://github.com/CodeEditorLand/Foundation/issues"
+	},
+	"dependencies": {
+		"semver": "^7.3.8",
+		"winreg": "^1.2.4"
+	},
+	"description": "Run NodeJS with logging options needed by Deopt Explorer",
+	"devDependencies": {
+		"@types/semver": "^7.3.13",
+		"@types/winreg": "^1.2.32",
+		"typescript": "^4.9.5",
+		"typescript-esbuild": ""
+	},
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"license": "SEE LICENSE IN LICENSE",
+	"name": "dexnode",
+	"private": false,
+	"publishConfig": {
+		"access": "public"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "Playform",
-		"email": "Hello@Playform.Cloud",
-		"url": "https://playform.cloud"
-	},
-	"type": "module",
-	"bin": {
-		"dexnode": "./bin/dexnode.js"
 	},
 	"scripts": {
 		"clean": "tsc -b --clean",
@@ -28,17 +39,6 @@
 		"prestart": "npm run compile",
 		"start": "node bin/dexnode"
 	},
-	"dependencies": {
-		"semver": "^7.3.8",
-		"winreg": "^1.2.4"
-	},
-	"devDependencies": {
-		"@types/semver": "^7.3.13",
-		"@types/winreg": "^1.2.32",
-		"typescript": "^4.9.5",
-		"typescript-esbuild": "0.4.5"
-	},
-	"publishConfig": {
-		"access": "public"
-	}
+	"type": "module",
+	"version": "0.0.1"
 }
