--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -33,14 +33,14 @@
 		"start": "node bin/dexnode"
 	},
 	"dependencies": {
-		"semver": "^7.3.8",
-		"winreg": "^1.2.4"
+		"semver": "7.6.0",
+		"winreg": "1.2.5"
 	},
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"@types/semver": "^7.3.13",
-		"@types/winreg": "^1.2.32"
+		"@types/semver": "7.5.8",
+		"@types/winreg": "1.2.36"
 	},
 	"publishConfig": {
 		"access": "public"
