--- a/package.json
+++ b/package.json
@@ -1460,48 +1460,48 @@
 		"onWebviewPanel:deoptexplorer.functionView"
 	],
 	"dependencies": {
-		"@esfx/async-deferred": "^1.1.0-alpha.202306080253",
-		"@esfx/async-delay": "^1.1.0-alpha.202306080253",
-		"@esfx/async-iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/async-mutex": "^1.1.0-alpha.202306080253",
-		"@esfx/cancelable": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashmap": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashset": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-sortedset": "^1.1.0-alpha.202306080253",
-		"@esfx/disposable": "^1.1.0-alpha.202306080253",
-		"@esfx/equatable": "^1.1.0-alpha.202306080253",
-		"@esfx/fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-query": "^1.1.0-alpha.202306080253",
-		"@esfx/ref": "^1.1.0-alpha.202306080253",
-		"@esfx/struct-type": "^1.1.0-alpha.202306080253",
-		"@js-temporal/polyfill": "^0.4.3",
-		"chokidar": "^3.4.0",
-		"decimal.js-light": "^2.5.1",
-		"ffi-napi": "^4.0.3",
-		"ref-array-di": "^1.2.2",
-		"ref-napi": "^3.0.2",
-		"ref-struct-di": "^1.1.1",
-		"semver": "^6.3.0",
-		"source-map": "^0.6.1",
-		"source-map-support": "^0.5.13",
-		"timeago.js": "^4.0.1"
+		"@esfx/async-deferred": "1.1.0-alpha.202306080253",
+		"@esfx/async-delay": "1.1.0-alpha.202306080253",
+		"@esfx/async-iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/async-mutex": "1.1.0-alpha.202306080253",
+		"@esfx/cancelable": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashmap": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashset": "1.1.0-alpha.202306080253",
+		"@esfx/collections-sortedset": "1.1.0-alpha.202306080253",
+		"@esfx/disposable": "1.1.0-alpha.202306080253",
+		"@esfx/equatable": "1.1.0-alpha.202306080253",
+		"@esfx/fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-query": "1.1.0-alpha.202306080253",
+		"@esfx/ref": "1.1.0-alpha.202306080253",
+		"@esfx/struct-type": "1.1.0-alpha.202306080253",
+		"@js-temporal/polyfill": "0.4.3",
+		"chokidar": "3.4.0",
+		"decimal.js-light": "2.5.1",
+		"ffi-napi": "4.0.3",
+		"ref-array-di": "1.2.2",
+		"ref-napi": "3.0.2",
+		"ref-struct-di": "1.1.1",
+		"semver": "6.3.0",
+		"source-map": "0.6.1",
+		"source-map-support": "0.5.13",
+		"timeago.js": "4.0.1"
 	},
 	"devDependencies": {
-		"@esfx/type-model": "^1.0.0",
-		"@types/ffi-napi": "^4.0.3",
-		"@types/glob": "^8.0.0",
-		"@types/node": "^14.14.44",
-		"@types/ref-array-di": "^1.2.2",
-		"@types/ref-napi": "^3.0.3",
-		"@types/ref-struct-di": "^1.1.3",
-		"@types/semver": "^6.2.0",
-		"@types/source-map-support": "^0.5.0",
-		"glob": "^8.0.3",
-		"js-yaml": "^3.13.1",
-		"plist": "^3.0.2",
-		"rimraf": "^3.0.0",
-		"ts-loader": "^9.4.3"
+		"@esfx/type-model": "1.0.0",
+		"@types/ffi-napi": "4.0.3",
+		"@types/glob": "8.0.0",
+		"@types/node": "14.14.44",
+		"@types/ref-array-di": "1.2.2",
+		"@types/ref-napi": "3.0.3",
+		"@types/ref-struct-di": "1.1.3",
+		"@types/semver": "6.2.0",
+		"@types/source-map-support": "0.5.0",
+		"glob": "8.0.3",
+		"js-yaml": "3.13.1",
+		"plist": "3.0.2",
+		"rimraf": "3.0.0",
+		"ts-loader": "9.4.3"
 	},
 	"icon": "resources/icon.png",
 	"capabilities": {
