--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "dexnode",
-  "version": "1.2.2",
-  "description": "Run NodeJS with logging options needed by Deopt Explorer",
-  "type": "module",
-  "bin": {
-    "dexnode": "./bin/dexnode.js"
-  },
-  "keywords": [
-    "deopt",
-    "explorer",
-    "nodejs",
-    "v8"
-  ],
-  "author": "Ron Buckton <ron.buckton@microsoft.com>",
-  "license": "MIT",
-  "dependencies": {
-    "semver": "^7.3.8",
-    "winreg": "^1.2.4"
-  },
-  "devDependencies": {
-    "@types/semver": "^7.3.13",
-    "@types/winreg": "^1.2.32",
-    "typescript": "^4.9.5"
-  },
-  "scripts": {
-    "compile": "tsc -b",
-    "clean": "tsc -b --clean",
-    "prestart": "npm run compile",
-    "start": "node bin/dexnode"
-  }
+	"bin": {
+		"dexnode": "./bin/dexnode.js"
+	},
+	"dependencies": {
+		"semver": "^7.3.8",
+		"winreg": "^1.2.4"
+	},
+	"description": "Run NodeJS with logging options needed by Deopt Explorer",
+	"devDependencies": {
+		"@types/semver": "^7.3.13",
+		"@types/winreg": "^1.2.32"
+	},
+	"name": "dexnode",
+	"scripts": {
+		"clean": "tsc -b --clean",
+		"compile": "tsc -b",
+		"prestart": "npm run compile",
+		"start": "node bin/dexnode"
+	}
 }
