--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -11,11 +11,11 @@
 		"start": "node bin/dexnode"
 	},
 	"dependencies": {
-		"semver": "^7.6.2",
-		"winreg": "^1.2.5"
+		"semver": "7.6.2",
+		"winreg": "1.2.5"
 	},
 	"devDependencies": {
-		"@types/semver": "^7.5.8",
-		"@types/winreg": "^1.2.36"
+		"@types/semver": "7.5.8",
+		"@types/winreg": "1.2.36"
 	}
 }
