--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"version": "1.1.0",
 	"license": "MIT",
 	"engines": {
-		"vscode": "^1.75.0"
+		"vscode": "1.75.0"
 	},
 	"icon": "resources/icon.png",
 	"publisher": "rbuckton",
@@ -1492,57 +1492,57 @@
 		"test": "node out/test/runTest.js"
 	},
 	"dependencies": {
-		"@esfx/async-deferred": "^1.1.0-alpha.202306080253",
-		"@esfx/async-delay": "^1.1.0-alpha.202306080253",
-		"@esfx/async-iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/async-mutex": "^1.1.0-alpha.202306080253",
-		"@esfx/cancelable": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashmap": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashset": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-sortedset": "^1.1.0-alpha.202306080253",
-		"@esfx/disposable": "^1.1.0-alpha.202306080253",
-		"@esfx/equatable": "^1.1.0-alpha.202306080253",
-		"@esfx/fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-query": "^1.1.0-alpha.202306080253",
-		"@esfx/ref": "^1.1.0-alpha.202306080253",
-		"@esfx/struct-type": "^1.1.0-alpha.202306080253",
-		"@js-temporal/polyfill": "^0.4.4",
-		"@vscode/codicons": "^0.0.36",
-		"chokidar": "^3.6.0",
-		"decimal.js-light": "^2.5.1",
-		"ffi-napi": "^4.0.3",
-		"ref-array-di": "^1.2.2",
-		"ref-napi": "^3.0.3",
-		"ref-struct-di": "^1.1.1",
-		"semver": "^7.6.2",
-		"source-map": "^0.7.4",
-		"source-map-support": "^0.5.21",
-		"timeago.js": "^4.0.2",
-		"typescript": "^5.4.5"
+		"@esfx/async-deferred": "1.1.0-alpha.202306080253",
+		"@esfx/async-delay": "1.1.0-alpha.202306080253",
+		"@esfx/async-iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/async-mutex": "1.1.0-alpha.202306080253",
+		"@esfx/cancelable": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashmap": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashset": "1.1.0-alpha.202306080253",
+		"@esfx/collections-sortedset": "1.1.0-alpha.202306080253",
+		"@esfx/disposable": "1.1.0-alpha.202306080253",
+		"@esfx/equatable": "1.1.0-alpha.202306080253",
+		"@esfx/fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-query": "1.1.0-alpha.202306080253",
+		"@esfx/ref": "1.1.0-alpha.202306080253",
+		"@esfx/struct-type": "1.1.0-alpha.202306080253",
+		"@js-temporal/polyfill": "0.4.4",
+		"@vscode/codicons": "0.0.36",
+		"chokidar": "3.6.0",
+		"decimal.js-light": "2.5.1",
+		"ffi-napi": "4.0.3",
+		"ref-array-di": "1.2.2",
+		"ref-napi": "3.0.3",
+		"ref-struct-di": "1.1.1",
+		"semver": "7.6.2",
+		"source-map": "0.7.4",
+		"source-map-support": "0.5.21",
+		"timeago.js": "4.0.2",
+		"typescript": "5.4.5"
 	},
 	"devDependencies": {
-		"@esfx/type-model": "^1.0.0",
-		"@types/ffi-napi": "^4.0.10",
-		"@types/glob": "^8.1.0",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^20.14.5",
-		"@types/ref-array-di": "^1.2.8",
-		"@types/ref-napi": "^3.0.12",
-		"@types/ref-struct-di": "^1.1.12",
-		"@types/semver": "^7.5.8",
-		"@types/source-map-support": "^0.5.10",
-		"@types/vscode": "^1.90.0",
-		"@vscode/test-electron": "^2.4.0",
-		"glob": "^10.4.1",
-		"jest": "^29.7.0",
-		"jest-environment-node": "^29.7.0",
-		"js-yaml": "^4.1.0",
-		"plist": "^3.1.0",
-		"rimraf": "^5.0.7",
-		"ts-jest": "^29.1.5",
-		"ts-loader": "^9.5.1",
-		"webpack": "^5.92.0",
-		"webpack-cli": "^5.1.4"
+		"@esfx/type-model": "1.0.0",
+		"@types/ffi-napi": "4.0.10",
+		"@types/glob": "8.1.0",
+		"@types/jest": "29.5.12",
+		"@types/node": "20.14.5",
+		"@types/ref-array-di": "1.2.8",
+		"@types/ref-napi": "3.0.12",
+		"@types/ref-struct-di": "1.1.12",
+		"@types/semver": "7.5.8",
+		"@types/source-map-support": "0.5.10",
+		"@types/vscode": "1.90.0",
+		"@vscode/test-electron": "2.4.0",
+		"glob": "10.4.1",
+		"jest": "29.7.0",
+		"jest-environment-node": "29.7.0",
+		"js-yaml": "4.1.0",
+		"plist": "3.1.0",
+		"rimraf": "5.0.7",
+		"ts-jest": "29.1.5",
+		"ts-loader": "9.5.1",
+		"webpack": "5.92.0",
+		"webpack-cli": "5.1.4"
 	}
 }
