--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -15,13 +15,13 @@
   "author": "Ron Buckton <ron.buckton@microsoft.com>",
   "license": "MIT",
   "dependencies": {
-    "semver": "^7.6.2",
-    "winreg": "^1.2.5"
+    "semver": "7.6.2",
+    "winreg": "1.2.5"
   },
   "devDependencies": {
-    "@types/semver": "^7.5.8",
-    "@types/winreg": "^1.2.36",
-    "typescript": "^5.4.5"
+    "@types/semver": "7.5.8",
+    "@types/winreg": "1.2.36",
+    "typescript": "5.4.5"
   },
   "scripts": {
     "compile": "tsc -b",
