--- a/package.json
+++ b/package.json
@@ -1460,48 +1460,48 @@
 		"onWebviewPanel:deoptexplorer.functionView"
 	],
 	"dependencies": {
-		"@esfx/async-deferred": "^1.1.0-alpha.202306080253",
-		"@esfx/async-delay": "^1.1.0-alpha.202306080253",
-		"@esfx/async-iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/async-mutex": "^1.1.0-alpha.202306080253",
-		"@esfx/cancelable": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashmap": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-hashset": "^1.1.0-alpha.202306080253",
-		"@esfx/collections-sortedset": "^1.1.0-alpha.202306080253",
-		"@esfx/disposable": "^1.1.0-alpha.202306080253",
-		"@esfx/equatable": "^1.1.0-alpha.202306080253",
-		"@esfx/fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-fn": "^1.1.0-alpha.202306080253",
-		"@esfx/iter-query": "^1.1.0-alpha.202306080253",
-		"@esfx/ref": "^1.1.0-alpha.202306080253",
-		"@esfx/struct-type": "^1.1.0-alpha.202306080253",
-		"@js-temporal/polyfill": "^0.4.4",
-		"chokidar": "^3.6.0",
-		"decimal.js-light": "^2.5.1",
-		"ffi-napi": "^4.0.3",
-		"ref-array-di": "^1.2.2",
-		"ref-napi": "^3.0.3",
-		"ref-struct-di": "^1.1.1",
-		"semver": "^7.6.2",
-		"source-map": "^0.7.4",
-		"source-map-support": "^0.5.21",
-		"timeago.js": "^4.0.2"
+		"@esfx/async-deferred": "1.1.0-alpha.202306080253",
+		"@esfx/async-delay": "1.1.0-alpha.202306080253",
+		"@esfx/async-iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/async-mutex": "1.1.0-alpha.202306080253",
+		"@esfx/cancelable": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashmap": "1.1.0-alpha.202306080253",
+		"@esfx/collections-hashset": "1.1.0-alpha.202306080253",
+		"@esfx/collections-sortedset": "1.1.0-alpha.202306080253",
+		"@esfx/disposable": "1.1.0-alpha.202306080253",
+		"@esfx/equatable": "1.1.0-alpha.202306080253",
+		"@esfx/fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-fn": "1.1.0-alpha.202306080253",
+		"@esfx/iter-query": "1.1.0-alpha.202306080253",
+		"@esfx/ref": "1.1.0-alpha.202306080253",
+		"@esfx/struct-type": "1.1.0-alpha.202306080253",
+		"@js-temporal/polyfill": "0.4.4",
+		"chokidar": "3.6.0",
+		"decimal.js-light": "2.5.1",
+		"ffi-napi": "4.0.3",
+		"ref-array-di": "1.2.2",
+		"ref-napi": "3.0.3",
+		"ref-struct-di": "1.1.1",
+		"semver": "7.6.2",
+		"source-map": "0.7.4",
+		"source-map-support": "0.5.21",
+		"timeago.js": "4.0.2"
 	},
 	"devDependencies": {
-		"@esfx/type-model": "^1.0.0",
-		"@types/ffi-napi": "^4.0.10",
-		"@types/glob": "^8.1.0",
-		"@types/node": "^20.14.9",
-		"@types/ref-array-di": "^1.2.8",
-		"@types/ref-napi": "^3.0.12",
-		"@types/ref-struct-di": "^1.1.12",
-		"@types/semver": "^7.5.8",
-		"@types/source-map-support": "^0.5.10",
-		"glob": "^10.4.2",
-		"js-yaml": "^4.1.0",
-		"plist": "^3.1.0",
-		"rimraf": "^5.0.7",
-		"ts-loader": "^9.5.1"
+		"@esfx/type-model": "1.0.0",
+		"@types/ffi-napi": "4.0.10",
+		"@types/glob": "8.1.0",
+		"@types/node": "20.14.9",
+		"@types/ref-array-di": "1.2.8",
+		"@types/ref-napi": "3.0.12",
+		"@types/ref-struct-di": "1.1.12",
+		"@types/semver": "7.5.8",
+		"@types/source-map-support": "0.5.10",
+		"glob": "10.4.2",
+		"js-yaml": "4.1.0",
+		"plist": "3.1.0",
+		"rimraf": "5.0.7",
+		"ts-loader": "9.5.1"
 	},
 	"icon": "resources/icon.png",
 	"capabilities": {
