--- a/.github/workflows/Node.yml
+++ b/.github/workflows/Node.yml
@@ -51,6 +51,7 @@ jobs:
             STNOUPGRADE: 1
             STRIPE_CLI_TELEMETRY_OPTOUT: 1
             TELEMETRY_DISABLED: 1
+            TERRAFORM_TELEMETRY: 0
 
         strategy:
             matrix:
@@ -81,6 +82,9 @@ jobs:
                   cache-dependency-path: ./pnpm-lock.yaml
 
             - run: pnpm install
+              working-directory: .
+
+            - run: pnpm run test
               working-directory: .
 
             - uses: actions/setup-node@v4.0.2
