--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -1,40 +1,32 @@
 {
-<<<<<<< HEAD
-	"bin": {
-		"dexnode": "./bin/dexnode.js"
-	},
-	"dependencies": {
-		"semver": "^7.3.8",
-		"winreg": "^1.2.4"
-	},
-	"description": "Run NodeJS with logging options needed by Deopt Explorer",
-	"devDependencies": {
-		"@types/semver": "^7.3.13",
-		"@types/winreg": "^1.2.32"
-	},
-	"name": "dexnode",
-=======
-	"name": "dexnode",
-	"description": "Run NodeJS with logging options needed by Deopt Explorer",
-	"bin": {
-		"dexnode": "./bin/dexnode.js"
-	},
->>>>>>> 80f3498f65970fc355e3663aa94ca026b3c832f6
-	"scripts": {
-		"clean": "tsc -b --clean",
-		"compile": "tsc -b",
-		"prestart": "npm run compile",
-		"start": "node bin/dexnode"
-<<<<<<< HEAD
-=======
-	},
-	"dependencies": {
-		"semver": "7.6.3",
-		"winreg": "1.2.5"
-	},
-	"devDependencies": {
-		"@types/semver": "7.5.8",
-		"@types/winreg": "1.2.36"
->>>>>>> 80f3498f65970fc355e3663aa94ca026b3c832f6
-	}
+  "name": "dexnode",
+  "version": "1.2.2",
+  "description": "Run NodeJS with logging options needed by Deopt Explorer",
+  "type": "module",
+  "bin": {
+    "dexnode": "./bin/dexnode.js"
+  },
+  "keywords": [
+    "deopt",
+    "explorer",
+    "nodejs",
+    "v8"
+  ],
+  "author": "Ron Buckton <ron.buckton@microsoft.com>",
+  "license": "MIT",
+  "dependencies": {
+    "semver": "^7.3.8",
+    "winreg": "^1.2.4"
+  },
+  "devDependencies": {
+    "@types/semver": "^7.3.13",
+    "@types/winreg": "^1.2.32",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "compile": "tsc -b",
+    "clean": "tsc -b --clean",
+    "prestart": "npm run compile",
+    "start": "node bin/dexnode"
+  }
 }
