--- a/tools/dexnode/package.json
+++ b/tools/dexnode/package.json
@@ -3,13 +3,13 @@
 		"dexnode": "./bin/dexnode.js"
 	},
 	"dependencies": {
-		"semver": "^7.3.8",
-		"winreg": "^1.2.4"
+		"semver": "7.3.8",
+		"winreg": "1.2.4"
 	},
 	"description": "Run NodeJS with logging options needed by Deopt Explorer",
 	"devDependencies": {
-		"@types/semver": "^7.3.13",
-		"@types/winreg": "^1.2.32"
+		"@types/semver": "7.3.13",
+		"@types/winreg": "1.2.32"
 	},
 	"name": "dexnode",
 	"scripts": {
