--- a/package.json
+++ b/package.json
@@ -1433,21 +1433,21 @@
 		}
 	},
 	"dependencies": {
-		"@esfx/async-deferred": "1.1.0-alpha.202307260322",
-		"@esfx/async-delay": "1.1.0-alpha.202307260322",
-		"@esfx/async-iter-fn": "1.1.0-alpha.202307260322",
-		"@esfx/async-mutex": "1.1.0-alpha.202307260322",
-		"@esfx/cancelable": "1.1.0-alpha.202307260322",
-		"@esfx/collections-hashmap": "1.1.0-alpha.202307260322",
-		"@esfx/collections-hashset": "1.1.0-alpha.202307260322",
-		"@esfx/collections-sortedset": "1.1.0-alpha.202307260322",
-		"@esfx/disposable": "1.1.0-alpha.202307260322",
-		"@esfx/equatable": "1.1.0-alpha.202307260322",
-		"@esfx/fn": "1.1.0-alpha.202307260322",
-		"@esfx/iter-fn": "1.1.0-alpha.202307260322",
-		"@esfx/iter-query": "1.1.0-alpha.202307260322",
-		"@esfx/ref": "1.1.0-alpha.202307260322",
-		"@esfx/struct-type": "1.1.0-alpha.202307260322",
+		"@esfx/async-deferred": "1.0.0",
+		"@esfx/async-delay": "1.0.0",
+		"@esfx/async-iter-fn": "1.0.2",
+		"@esfx/async-mutex": "1.0.0",
+		"@esfx/cancelable": "1.0.0",
+		"@esfx/collections-hashmap": "1.0.2",
+		"@esfx/collections-hashset": "1.0.2",
+		"@esfx/collections-sortedset": "1.0.2",
+		"@esfx/disposable": "1.0.0",
+		"@esfx/equatable": "1.0.2",
+		"@esfx/fn": "1.0.2",
+		"@esfx/iter-fn": "1.0.2",
+		"@esfx/iter-query": "1.0.2",
+		"@esfx/ref": "1.0.0",
+		"@esfx/struct-type": "1.0.0",
 		"@js-temporal/polyfill": "0.4.4",
 		"chokidar": "3.6.0",
 		"decimal.js-light": "2.5.1",
@@ -1456,13 +1456,13 @@
 		"ref-napi": "3.0.3",
 		"ref-struct-di": "1.1.1",
 		"semver": "7.6.3",
-		"source-map": "0.8.0-beta.0",
+		"source-map": "0.7.4",
 		"source-map-support": "0.5.21",
 		"timeago.js": "4.0.2"
 	},
 	"description": "V8 Deoptimization Explorer Extension for VS Code",
 	"devDependencies": {
-		"@esfx/type-model": "1.1.0-alpha.202307260322",
+		"@esfx/type-model": "1.0.0",
 		"@types/benchmark": "2.1.5",
 		"@types/ffi-napi": "4.0.10",
 		"@types/glob": "8.1.0",
